--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 	width: 100%;
 }
 
- .fixd-header .am-navbar {
+.fixd-header .am-navbar {
 	position: fixed;
 	top:0;
 	width: 100%;
@@ -18,4 +18,20 @@
 
 .page-content{
 	padding: 45px 5px;
+}
+
+#chat-page .chat-me .am-list-extra{
+	flex-basis: auto;
+}
+
+#chat-page .chat-me .am-list-content{
+	padding-right: 15px;
+	text-align: right;
+}
+
+.stick-footer{
+	z-index:10;
+	position:absolute;
+	bottom: 0;
+	width:100%;
 }
