--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,14 @@
 	text-align: right;
 }
 
+#chat-page .am-grid-icon{
+	margin-top:0;
+}
+
+#chat-page .am-grid-text{
+	margin-top:0;
+}
+
 .stick-footer{
 	z-index:10;
 	position:absolute;
